# moss-core-service

./: .env.secret  .env.shared  .gitignore  .gitmodules  README.md  app.js  install-deps.sh  package.json  test.py  test2.py
configs/: listener.yaml  speaker.yaml
core/listener/: README.md  __init__.py  units
core/listener/src/: listener.cpp  listener.hpp  pybinding.cpp
core/listener/src/cmake/: openfst.cmake
core/listener/src/decoder/: ctc_wfst_beam_search.cc  params.h
core/listener/src/frontend/: wav.h
core/listener/src/vad/: CMakeLists.txt  vad.h
core/server/: Server.js  index.js
core/speaker/: CMakeLists.txt  Makefile  README.md  commons.py  demo.js  index.js  package.json  utils.py
core/speaker/CMakeModules/: FindONNXRuntime.cmake
core/speaker/include/: speaker.hpp
core/speaker/lib/: Config.js  ModelConfig.js  Speaker.js
core/speaker/lib/text_cleaners/: index.js  latin-to-bopomofo.js  mandarin.js  pinyin-to-bopomofo.js
core/speaker/src/: addon.cpp  binding.cpp  pybinding.cpp  speaker.cpp
core/speaker/text/: index.js  mandarin.js  mandarin.py
docs/: .asoundrc
lib/: config.js  consts.js  initialize.js  logger.js  util.js
lib/listener/: .gitignore  CMakeLists.txt  Makefile  __init__.py  utils.py
lib/listener/src/: CMakeLists.txt  listener.cc  listener.cpp  listener.hpp  main.cc  pybinding.cpp
lib/listener/src/cmake/: openfst.cmake
lib/listener/src/decoder/: onnx_asr_model.cc  params.h
lib/listener/src/vad/: vad.cc  vad.h
lib/speaker/: CMakeLists.txt  Makefile  __init__.py  commons.py  utils.py
lib/speaker/src/: CMakeLists.txt  main.cpp  pybinding.cpp  speaker.cpp  speaker.hpp
lib/speaker/text/: __init__.py  cleaners.py
lib/text/: symbols.py
models/listener/: README.md
models/speaker/: README.md
